Fixed crashing dark mode due too large tables, added scrolling for showing wide data, enforced error message

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,5 @@ html, body, #root, .App {
     min-height: 100vh;
     width: 100vw;
     margin: 0;
+    background-color: black;
 }
